# HH_SJ_parser

./: FILTERED_PYTHON KALININGRAD_HH.JSON  FILTERED_PYTHON КАЛИНИНГРАД_SJ.JSON  README.md  Vacancy.py  abstract.py  hh.py  json_saver.py  main.py  pyproject.toml  sj.py
src/: Vacancy.py  abstract.py  hh.py  json_saver.py  sj.py
utils/: utils.py
